Created 90% of the website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="info-div">
         <div id="info-bg">
           <div id="info" action="">
-            <h1 id="form-header">Book Info</h1>
+            <h1 id="info-header">Book Info</h1>
             <div class="info-box">
               <h2>Title:</h2>
               <p id="title-info"></p>
