Added more compatibility

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="input-box">
               <label for="notes">Notes:</label>
-              <textarea name="notes" id="notes" rows="5"></textarea>
+              <textarea name="notes" id="notes"></textarea>
             </div>
             <input id="submit" type="button" value="Add!">
           </form>
@@ -41,7 +41,7 @@
     <div id="info-container" class="hidden">
       <div id="info-div">
         <div id="info-bg">
-          <div id="info" action="">
+          <div id="info">
             <h1 id="info-header">Book Info</h1>
             <div class="info-box">
               <h2>Title:</h2>
